fonts added - bugs fixed - new file current add

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,18 +1,103 @@
 @font-face{
-    font-family: iransans;
-    src: url(../fonts/Iranian\ Sans.ttf);
+    font-family: iransansbold;
+    src: url(../fonts/IRANSansWeb\(FaNum\)\ Bold.otf);
 }
+@font-face{
+    font-family: iransansnormal;
+    src: url(../fonts/IRANSansWeb\(FaNum\)\ Bold.otf);
+}
+body{
+    background: #f2f2f2;
+}
+button,p,span,title,label{
+    font-size: 0.75rem;
+    font-weight: 600;
+    font-family: iransansnormal;
+  }
 
+  h1,h2,h3,h4,h5,h6,a{
+    font-family: iransansbold;
+    font-weight: 600;
 
-.navbar.navbar-expand-sm{
+  }
+
+  li, ul{
+    font-family: iransansnormal;
+    font-weight: normal;
+
+  }
+
+.navbar.navbar-expand-sm#navtop{
     font-family: iransans;
     padding:0.5rem 3rem;
      background:#da1539;
      direction: rtl;
 }
+
+#navone{
+    font-family: iransans;
+    padding:0.1rem 3rem;
+     background:rgb(50,50,50);
+     direction: rtl;
+     color: white;
+
+}
+
 div.collapse a{
     font-size: 0.75rem;
     font-weight: 600;
     color: white;
+}
+div.collapse a:hover{
+    font-size: 0.75rem;
+    font-weight: 600;
+    color: white;
+    cursor: pointer;
 
 }
+div.collapse a:active{
+    color: white;
+    text-decoration: white;
+}
+
+#navone a.nav-link , #navone span{
+    font-size: 0.75rem;
+    color: white;
+    cursor: pointer;
+
+}
+#navone span{
+    line-height: 30px;
+}
+.sidepanel  {
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    height: 250px;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+  }
+  
+  .sidepanel a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+
+.fa-angle-left{
+    position: relative;
+    top: 4px;
+}
+
+.tab-content button,.tab-content p,.tab-content h1,.tab-content h2,.tab-content h3,.tab-content h4,.tab-content h5,.tab-content h6,.tab-content span,.tab-content title,.tab-content label,.tab-content li,.tab-content ul {
+    color:rgb(95, 77, 73);
+}
+
+  
