--- a/styles/farsi-style.css
+++ b/styles/farsi-style.css
@@ -27,9 +27,9 @@ button,p,span,title,label{
 
   }
 
-.navbar.navbar-expand-sm#navtop{
+#navbar_main{
     font-family: iransans;
-    padding:0.5rem 3rem;
+    padding:0.5rem 1.75rem;
      background:#da1539;
      direction: rtl;
 }
@@ -43,11 +43,12 @@ button,p,span,title,label{
 
 }
 
-div.collapse a{
+.nav-item a{
     font-size: 0.75rem;
     font-weight: 600;
-    color: white;
+
 }
+
 div.collapse a:hover{
     font-size: 0.75rem;
     font-weight: 600;
@@ -55,6 +56,7 @@ div.collapse a:hover{
     cursor: pointer;
 
 }
+
 div.collapse a:active{
     color: white;
     text-decoration: white;
@@ -100,4 +102,80 @@ div.collapse a:active{
     color:rgb(95, 77, 73);
 }
 
-  
+
+.navbar .megamenu{ padding: 1rem; }
+/* ============ desktop view ============ */
+@media all and (min-width: 992px) {
+	
+	.navbar .has-megamenu{position:static!important;}
+	.navbar .megamenu{left:0; right:0; width:100%; margin-top:0;  }
+	
+}	
+/* ============ desktop view .end// ============ */
+
+
+/* ============ mobile view ============ */
+@media(max-width: 991px){
+	.navbar.fixed-top .navbar-collapse, .navbar.sticky-top .navbar-collapse{
+		overflow-y: auto;
+	    max-height: 90vh;
+	    margin-top:10px;
+	}
+}
+
+body.offcanvas-active{
+	overflow:hidden;
+}
+
+.offcanvas-header{ display:none; }
+
+.screen-darken{
+	height: 100%;
+	width:0%;
+	z-index: 30;
+	position: fixed;
+	top: 0;
+	right: 0;
+	opacity:0;
+	visibility:hidden;
+	background-color: rgba(34, 34, 34, 0.6);
+	transition:opacity .2s linear, visibility 0.2s, width 2s ease-in;
+}
+
+.screen-darken.active{
+	z-index:10; 
+	transition:opacity .3s ease, width 0s;
+    opacity:1;
+    width:100%;
+    visibility:visible;
+}
+
+/* ============ mobile view ============ */
+@media all and (max-width: 991px) {
+	
+	.offcanvas-header{ display:block; }
+
+	.mobile-offcanvas{
+		visibility: hidden;
+		transform:translateX(100%);
+	    border-radius:0; 
+		display:block;
+	    position: fixed;
+	    top: 0; left:20%;
+	    height: 100%;
+	    z-index: 1200;
+	    width:80%;
+	    overflow-y: scroll;
+	    overflow-x: hidden;
+	    transition: visibility .3s ease-in-out, transform .3s ease-in-out;
+	}
+
+	.mobile-offcanvas.show{
+		visibility: visible;
+    	transform: translateX(0%);
+	}
+	.mobile-offcanvas .container, .mobile-offcanvas .container-fluid{
+		display: block;
+	}
+
+}
