--- a/styles/farsi-style.css
+++ b/styles/farsi-style.css
@@ -52,7 +52,6 @@ button,p,span,title,label{
 div.collapse a:hover{
     font-size: 0.75rem;
     font-weight: 600;
-    color: white;
     cursor: pointer;
 
 }
@@ -78,7 +77,7 @@ div.collapse a:active{
     height: 250px;
     top: 0;
     left: 0;
-    background-color: #111;
+    background-color: rgb(0, 0, 0);
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
@@ -88,7 +87,7 @@ div.collapse a:active{
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
-    color: #818181;
+    color: #ffffff;
     display: block;
     transition: 0.3s;
   }
@@ -206,6 +205,7 @@ body.offcanvas-active{
 #products{
     
     transition: 0.3s;
+   
 }
 
 
@@ -284,6 +284,7 @@ transition: 0.3s;
                 
                 
         }
+
         
         .accordion-button{
             font-size: 0.75rem;
@@ -308,3 +309,59 @@ transition: 0.3s;
         .card-header a{
             color: black;
         }
+
+        @media all and (max-width:400px) {
+           
+            #products{
+                width: 150%;
+                text-align: center;
+                transition: 0.3s;
+            }
+                
+        }
+
+        [class*='accordion'],[class*='accordion'] > *{
+            border: none;
+            background: #fa1942 !important;
+            color: white;
+        }
+        #collapseOne > div > div > div {
+            background: #da1539 !important;
+            background: #fa1942 !important;
+
+        }
+        #navbar_main > div > ul > li > a,.card-body ul li a{
+            color: white !important;
+        }
+        .accordion-header  button  , .accordion-body{
+            font-size: 0.68rem;
+        }
+
+        .languages{
+            padding-top: 12px;
+        }
+        
+        @media all and (max-width:380px) {
+        
+            .languages a , .languages i{
+                font-size: 70% !important;
+            }
+            /* .img-cont{
+                float: right;
+            } */
+            #navone{
+                padding:0 !important; 
+            }
+            .logo-cont{
+                padding-left: 10px !important;
+            }
+                
+        }
+
+        #navbar-main .nav-link:hover{
+            text-decoration: underline;
+        }
+
+        /* #navbar_main > div > ul > li > a{
+            opacity: 1 !important;
+        } */
