--- a/styles/farsi-style.css
+++ b/styles/farsi-style.css
@@ -187,15 +187,7 @@ body.offcanvas-active{
         color: black;
     }
     
-    #products:active{
-        
-        border: 1px solid rgb(143, 142, 142);
-        border-radius: 1px;
-        border-radius: 1px;
-    background: #f5f5f5;
-    box-shadow: inset 5px 5px 10px #f1f1f1,
-                inset -5px -5px 10px #ffffff;
-    }
+
 
 
 
@@ -321,28 +313,46 @@ transition: 0.3s;
         }
 
         [class*='accordion'],[class*='accordion'] > *{
+            
+            padding: 5px;
             border: none;
             background: #fa1942 !important;
             color: white;
         }
         #collapseOne > div > div > div {
-            background: #da1539 !important;
+            padding: 0 !important;
             background: #fa1942 !important;
 
         }
         #navbar_main > div > ul > li > a,.card-body ul li a{
             color: white !important;
         }
+        .card-body ul li a:active{
+            /* background: #fa1942 !important; */
+            color: #fa1942 !important;
+        }
+        .card-body{
+            padding-top: 20px;
+        }
         .accordion-header  button  , .accordion-body{
+            outline: 0;
             font-size: 0.68rem;
         }
 
-        .languages{
-            padding-top: 12px;
+        @media all and (max-width:720px) {
+
+
+            .languages{
+                padding-top: 12px;
+            }
+
         }
         
         @media all and (max-width:380px) {
-        
+
+            .languages{
+                padding-top: 12px;
+            }
             .languages a , .languages i{
                 font-size: 70% !important;
             }
@@ -361,6 +371,46 @@ transition: 0.3s;
         #navbar-main .nav-link:hover{
             text-decoration: underline;
         }
+        #toggledrop::after{
+            transition: 0.2s;
+            transform: rotate(90deg);
+        }
+
+        .show::after{
+            transform: rotate(360deg) !important;
+        }
+        .card{
+            border: 0 !important;
+        }
+        .accordion-header button::after{
+            display: inline-block;
+            margin-right: .255em;
+            vertical-align: .255em;
+            content: "";
+            border-top: .3em solid;
+            border-left: .3em solid transparent;
+            border-bottom: 0;
+            border-right: .3em solid transparent;
+            transition: 0.2s;
+            transform: rotate(90deg);
+        }
+        .accordion-header button[aria-expanded='true']::after{
+            display: inline-block;
+            margin-right: .255em;
+            vertical-align: .255em;
+            content: "";
+            border-top: .3em solid;
+            border-left: .3em solid transparent;
+            border-bottom: 0;
+            border-right: .3em solid transparent;
+            transition: 0.2s;
+            transform: rotate(360deg);
+        }
+        /* .accordion-header button::after{
+            transform: rotate(360deg);
+        } */
+
+        
 
         /* #navbar_main > div > ul > li > a{
             opacity: 1 !important;
