last commit 4 - lets goooo

--- a/styles/farsi-style.css
+++ b/styles/farsi-style.css
@@ -49,7 +49,7 @@ button,p,span,title,label{
 
 #navone{
     font-family: iransans;
-    padding:0.5rem 1.75rem;
+    padding:0.5rem 47px 0.5rem 1.75rem;
      background:rgb(50,50,50);
      direction: rtl;
      color: white;
