last commit - last part

--- a/styles/english-style.css
+++ b/styles/english-style.css
@@ -1,3 +1,6 @@
+body{
+    background: white;
+}
 
 @font-face{
     font-family: iransansbold;
@@ -29,7 +32,7 @@ button,p,span,title,label{
 #navbar_main{
     font-family: iransans;
     padding:0.5rem 1.75rem;
-     background:#da1539;
+     background:#fa1942;
      direction: ltr;
 }
 
@@ -193,13 +196,13 @@ body.offcanvas-active{
         border-radius: 1px;
         border-radius: 1px;
         background: #f5f5f5;
-        color:#da1539 !important;
+        color:#fa1942 !important;
     }
 
 }
 li.products{
     transition: 0.1 s;
-    color:#da1539 !important;
+    color:#fa1942 !important;
 }
 #suggest > img{
 opacity: .1;
@@ -225,9 +228,7 @@ opacity: 0;
 transition:0.5s;
 }
 
-body{
-    background: blue;
-}
+
 
 .suggest:hover img{
     opacity: 1;
@@ -239,7 +240,7 @@ body{
 
 @media all and (max-width:800px) {
     #g3{
-        background:#da1539;
+        background:#fa1942;
     }
 
     .suggest img{
@@ -280,6 +281,7 @@ body{
     color: white;
 }
 #collapseOne > div > div > div {
+    /* padding: 0; */
     background: #fa1942 !important;
 
 }
@@ -356,4 +358,8 @@ body{
     border-right: .3em solid transparent;
     transition: 0.2s;
     transform: rotate(360deg);
+}
+
+#g3 > div.row.col-12.col-lg-8.w-75.bg-white{
+    padding: 0;
 }
