--- a/styles/farsi-style.css
+++ b/styles/farsi-style.css
@@ -1,6 +1,8 @@
 
         /*================================ start public styles , please remove its ========================================*/
-
+#fixed-navbar{
+    transition: 0.2;
+}
 @font-face{
     font-family: iransansbold;
     src: url(../fonts/IRANSansWeb\(FaNum\)\ Bold.otf);
@@ -218,8 +220,9 @@ li.products a{
         }
 
         button[id*='tab']{
-            padding: 100px 54px;
+            padding: 20px 54px !important;
             background:#eee !important;
+            box-shadow:  20px 20px 60px #bebebe;
             border:none;
             outline: none;
             color:black !important;
@@ -233,6 +236,11 @@ li.products a{
             box-shadow:  12px 12px 31px #c11333,
                          -12px -12px 31px #ff1f51;
                          z-index: 99999999;
+            padding: 20px 40px !important;
+
+        }
+        #btntabs{
+            overflow-y: scroll;
         }
         
        
@@ -321,7 +329,7 @@ li.products a{
             transition: 0.2s;
             transform: rotate(90deg);
         }
-        .accordion-header button[aria-expanded='true']::after{
+        .accordion-header button[aria-expanded='true']:hover::after{
             display: inline-block;
             margin-right: .255em;
             vertical-align: .255em;
@@ -334,7 +342,7 @@ li.products a{
             transform: rotate(360deg);
         }
 
-        #toggledrop::after{
+        .toggledrop::after{
             transition: 0.2s;
             transform: rotate(90deg);
         }
